# ros

./: .gitignore  README.md  snode.bash  start.bash
src/kalman/: CMakeLists.txt  package.xml
src/kalman/scripts/: kalman_localization.py
src/kalman/scripts/filter/: kfilter.py
src/kalman/scripts/kfilter/: gmap.py  gposition.py  kfilter.py  visualize.py
src/kinematics/: CMakeLists.txt  package.xml
src/kinematics/scripts/: dummy_gazebo.py  movement_control.py
src/kinematics/scripts/control/: controller.py  state.py
src/perception/: CMakeLists.txt  package.xml
src/perception/launch/: maze.launch
src/perception/scripts/: line_detection.py
src/perception/scripts/lines/: detector.py  geometry.py  marker.py
src/sensors/: CMakeLists.txt  package.xml
src/sensors/action/: DiffAction.action
src/sensors/msg/: DayTemperature.msg  ProcessedMeasurement.msg  RawMeasurement.msg
src/sensors/scripts/: analysis.py  diffaction.py  measurement.py  processing.py  reader.py  record.py  test.py  view.py
src/sensors/scripts/utils/: analysis.py  reader.py
src/sensors/srv/: RecordMeasurement.srv
